--- a/Crud_Practice1/Site.Master
+++ b/Crud_Practice1/Site.Master
@@ -57,6 +57,8 @@
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Students">Students</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Attachments">Attachments</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/ExcelUpload">Excel File Upload</a></li>
+                        <asp:LinkButton ID="btnLogout" runat="server" OnClick="btnLogout_Click">Logout</asp:LinkButton>
+
                     </ul>
                 </div>
             </div>
